# SENT1NEL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STARTUP.md  api_logs.txt  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: AtmosphereShader.jsx  EntityList.jsx  EntityPoints.jsx  EntityTooltip.jsx  EventFeed.jsx  Globe.jsx  GlobeScene.jsx  Header.jsx  MapOverlays.jsx  SatelliteOrbits.jsx  Sidebar.jsx
sentinel/: __init__.py  __main__.py  config.py
sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sentinel/analytics/: __init__.py  anomaly.py  geofence.py  profiles.py  replay.py  velocity.py
sentinel/api/: __init__.py  app.py
sentinel/api/routes/: events.py  (+4 more)
sentinel/core/: __init__.py  backpressure.py  bus.py  constants.py  events.py  lifecycle.py  schemas.py
sentinel/ingestion/: __init__.py  aisstream.py  base.py  celestrak.py  geopolitics.py  openmeteo.py  opensky.py  synthetic_flights.py  usgs.py
sentinel/observability/: __init__.py  logging.py  metrics.py
sentinel/processing/: __init__.py  enricher.py  kalman.py  normalizer.py  pipeline.py  tracker.py
sentinel/storage/: __init__.py  event_writer.py  redis_cache.py  timescale.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_backpressure.py  test_pipeline.py
tests/load/: test_throughput.py
tests/unit/: test_anomaly.py  test_critical_failures.py  test_events.py  test_kalman.py  test_normalizer.py  test_schemas.py
(+4 files in other folders)
