[project]
name = "sentinel"
version = "0.1.0"
description = "World Awareness Engine — real-time geospatial intelligence from OSINT data streams"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",

    # Async runtime
    "uvloop>=0.19; sys_platform != 'win32'",

    # Message bus
    "nats-py>=2.6,<3",

    # Database
    "asyncpg>=0.29,<1",

    # Cache
    "redis>=5.0,<6",

    # API
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "websockets>=12,<14",

    # HTTP client
    "aiohttp>=3.9,<4",

    # Geospatial
    "shapely>=2.0,<3",

    # Science / math
    "numpy>=1.26,<3",
    "sgp4>=2.22,<3",

    # Observability
    "prometheus-client>=0.20,<1",
    "structlog>=24.1,<25",

    # Utilities
    "orjson>=3.9,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "httpx>=0.27,<1",
    "aioresponses>=0.7,<1",
    "ruff>=0.2,<1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
